--- a/Magento_Checkout/templates/php-cart/totals/subtotal.phtml
+++ b/Magento_Checkout/templates/php-cart/totals/subtotal.phtml
@@ -1,3 +1,35 @@
+<?php
+/**
+ * Hyvä Themes - https://hyva.io
+ * Copyright © Hyvä Themes 2020-present. All rights reserved.
+ * This product is licensed per Magento install
+ * See https://hyva.io/license
+ */
+
+use Hyva\Theme\ViewModel\HyvaCsp;
+
+/** @var HyvaCsp $hyvaCsp */
+
+/**
+ * The AlpineJS scope of this file is the method `initCartTotals()` in Magento_Checkout::php-cart/totals.phtml
+ */
+?>
+<script>
+    function initShippingTotalSegment() {
+        return {
+            isShippingTotal() {
+                return this.segment.code === 'shipping' && this.quoteData.is_virtual === 0 && !!this.shippingMethod;
+            }
+        };
+    }
+    (() => {
+        const initFn = () => Alpine.data('initShippingTotalSegment', initShippingTotalSegment);
+        window.Alpine
+            ? initFn()
+            : window.addEventListener('alpine:init', initFn, {once: true})
+    })()
+</script>
+<?php $hyvaCsp->registerInlineScript() ?>
 <template x-if="segment.code === 'subtotal'">
     <div class="flex pb-2 my-2 border-b text-md lg:text-sm md:grid md:grid-cols-2 md:w-full border-container">
         <div class="w-7/12 text-left md:w-auto"
