--- a/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
+++ b/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
@@ -31,27 +31,50 @@ if (!$shoppingAssistanceViewModel->isLoginAsCustomerEnabled()) {
 }
 ?>
 <script>
-    function initAllowShippingAssistence() {
-        return {
-            isAllowed: <?= $shoppingAssistanceViewModel->isAssistanceAllowed() ? 'true' : 'false' ?>,
-            showTooltip: false,
-            onChange(value) {
-                /**
-                 * assistance_allowed accepts 2 for "allowed" and 1 for "not allowed"
-                 * if assistance_allowed_checkbox is set to false, we cast it to 0 and add 1 === "1"
-                 * if assistance_allowed_checkbox is set to true, we cast it to 1 and add 1 === "2"
-                 */
-                this.$refs['assistance-input'].value = Number(value) + 1;
+    (() => {
+        function initAllowShippingAssistence() {
+            return {
+                isAllowed: <?= $shoppingAssistanceViewModel->isAssistanceAllowed() ? 'true' : 'false' ?>,
+
+                tooltip: false,
+                get tooltipVisible() {
+                    return this.tooltip
+                },
+                get tooltipHidden() {
+                    return !this.tooltip
+                },
+                toggleTooltip() {
+                    this.tooltip = !this.tooltip
+                },
+                showTooltip() {
+                    this.tooltip = true
+                },
+                hideTooltip() {
+                    this.tooltip = false
+                },
+
+                onChange() {
+                    const value = this.$event.target.checked
+                    /**
+                     * assistance_allowed accepts 2 for "allowed" and 1 for "not allowed"
+                     * if assistance_allowed_checkbox is set to false, we cast it to 0 and add 1 === "1"
+                     * if assistance_allowed_checkbox is set to true, we cast it to 1 and add 1 === "2"
+                     */
+                    this.$refs['assistance-input'].value = Number(value) + 1;
+                }
             }
         }
-    }
+
+        const initFn = () => Alpine.data('initAllowShippingAssistence', initAllowShippingAssistence);
+        window.Alpine ? initFn() : window.addEventListener('alpine:init', initFn, {once: true})
+    })()
 </script>
 <?php $hyvaCsp->registerInlineScript() ?>
 <div class="field choice"
-     x-data="initAllowShippingAssistence()"
+     x-data="initAllowShippingAssistence"
 >
     <input type="checkbox"
-           @change="onChange($event.target.checked)"
+           @change="onChange"
            name="assistance_allowed_checkbox"
            id="assistance_allowed_checkbox"
            value="1"
@@ -74,17 +97,17 @@ if (!$shoppingAssistanceViewModel->isLoginAsCustomerEnabled()) {
     <div class="inline-flex px-4">
         <button
             type="button"
-            @mouseover.prevent.stop="showTooltip = true"
-            @mouseleave.prevent.stop="showTooltip = false"
-            @focus="showTooltip = true"
-            @focusout="showTooltip = false"
-            @keydown.escape="showTooltip = false"
+            @mouseover.prevent.stop="showTooltip"
+            @mouseleave.prevent.stop="hideTooltip"
+            @focus="showTooltip"
+            @focusout="hideTooltip"
+            @keydown.escape="hideTooltip"
             aria-labelledby="assistance_allowed_checkbox_tooltip"
             aria-disabled="true"
         >
-        <?= $heroicons->questionMarkCircleHtml('cursor-hand') ?>
+            <?= $heroicons->questionMarkCircleHtml('cursor-hand') ?>
         </button>
-        <div class="relative" x-cloak x-show="showTooltip">
+        <div class="relative" x-cloak x-show="tooltipVisible">
             <div class="shadow-lg">
                 <div class="absolute top-0 left-0 z-10 w-64 p-2 -mt-6 text-sm leading-tight text-black transform
                     -translate-x-full md:-translate-x-1/3 -translate-y-full bg-white rounded-lg shadow-lg p-4">
